--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">CoronaFTS</string>
     <string name="title_string">Corona Fitness\nNo Pain No Gain!</string>
-    <string name="subtitle_string">Non prendiamoci in giro, se non lavori in quarantena,\nquando mai ti metterai in forma?</string>
+    <string name="subtitle_string">Non prendiamoci in giro, \nse non lavori in quarantena,\nquando mai ti metterai in forma?</string>
     <string name="butt_exercise">START NOW</string>
     <string name="type_1_desc_2">Exercise have to be executed in the time given. Try to work at the max in the seconds you have! The work is followed by a pause. The exercises below have specified the seconds of work first, and then the pause</string>
     <string name="type_2_desc_2">Try to complete all repetitions given within the total time limit! You decide when to pause and how to split the workout. If you cannot finish it, best luck next time</string>
